# sd4h1

./: .gitignore  README.md  pyproject.toml
configs/: allen_ish.yaml  default.yaml  merfish.yaml  stereoseq.yaml  visium.yaml
data/orthologs/: human_mouse.json  human_mouse.json.name_based_backup  human_zebrafish.json  human_zebrafish.json.name_based_backup  mouse_zebrafish.json  mouse_zebrafish.json.name_based_backup
rosetta/: __init__.py
rosetta/atlas/: __init__.py  conformal.py
rosetta/bridge/: __init__.py  alignment.py  losses.py  shared_space.py  (+1 more)
scripts/: benchmark_chisel.py  biological_validation.py  collect_runtimes.py  compute_baseline_ari.py  compute_samap_leiden_ari.py  download_data.py  evaluate_bridge.py  evaluate_chisel.py  evaluate_pca_ablation.py  generate_paper_figures.py  per_celltype_metrics.py  run_ablations.py  run_bridge_extra_baselines.py  run_compass.py  run_compass_hotspot.py  run_conformal_baseline.py  run_conformal_eval.py  run_multiseed_baselines.py  run_new_baselines.py  run_pipeline_completion.sh  run_samap_baseline.py  run_scvi_only.py  silhouette_comparison.py  spatial_validation.py  statistical_testing.py  train_ablations_multiseed.sh  train_bridge.py  train_bridge_pca_ablation.py  train_chisel.py  train_seeds_parallel.sh  validate_real_data.py  verify_phase1.py
tests/: test_alignment_metrics.py  test_atlas.py  test_bridge.py  test_compass.py  test_encoders.py  test_graph_construction.py  test_losses.py  test_metrics.py  test_multi_scale.py  test_ortholog_db.py  test_preprocessing.py  test_spatial_gnn.py  test_training.py
(+16 files in other folders)
