[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rosetta"
version = "0.1.0"
description = "Cross-species spatial transcriptomics integration via Fused Gromov-Wasserstein optimal transport"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torch-geometric>=2.4",
    "scanpy>=1.9",
    "anndata>=0.10",
    "pot>=0.9",
    "omegaconf>=2.3",
    "pytorch-lightning>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
data = [
    "requests>=2.28",
    "tqdm>=4.64",
    "allensdk>=2.16",
]

[tool.setuptools.packages.find]
include = ["rosetta*"]
